--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,66 +1,86 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .anchors {
-    display: block;
-    position: relative;
-    visibility: hidden;
-  }
+  display: block;
+  position: relative;
+  visibility: hidden;
+}
 
 .nav-link {
-    background-color: #fff;
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    cursor: pointer;
-    font-size: 1.25rem !important;
-  }
+  background-color: #fff;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  cursor: pointer;
+  font-size: 1.25rem !important;
+}
 
-  .navbar-nav > li{
-    padding: 0px 5px;
-  }
+.navbar-nav > li {
+  padding: 0px 5px;
+}
 
-  .navbar button.navbar-toggler:hover {
-    border-color: #ffffff;
-    background: #4837ff;
-    transition: all 0.3s ease;
-  }
-  
-  .navbar button.navbar-toggler:hover .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-  }
-  
-  .nav-link:hover, .fa-angles-down:hover {
-    background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
-    transition: all 0.3s ease;
-  }
+.navbar button.navbar-toggler:hover {
+  border-color: #ffffff;
+  background: #4837ff;
+  transition: all 0.3s ease;
+}
 
-  .white {
-    background: #ffffff;
-    height: fit-content;
-    padding: 20px 0px;
-  }
-  
-  .grey {
-    background:#ededed;
-    height: fit-content;
-    padding: 20px 0px;
-  }
+.navbar button.navbar-toggler:hover .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
 
-  footer {
-    background-color: #131313;
-    color: #ffffff;
-  }
-  
-  footer .container {
-    display: flex;
-    height: 10svh;
-  }
+.nav-link:hover,
+.fa-angles-down:hover {
+  background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
+  transition: all 0.3s ease;
+}
+
+.white {
+  background: #ffffff;
+  height: fit-content;
+  padding: 20px 0px;
+}
+
+.grey {
+  background: #ededed;
+  height: fit-content;
+  padding: 20px 0px;
+}
+
+.form {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #678;
+  font-size: 1rem;
+  margin: 10px 0px;
+  position: relative;
+}
+
+.form:hover {
+  cursor: pointer;
+  background: #4837ff;
+  transition: all 0.3s ease;
+}
+
+footer {
+  background-color: #131313;
+  color: #ffffff;
+}
+
+footer .container {
+  display: flex;
+  height: 10svh;
+}
