--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,23 +84,39 @@ html {
   padding: 20px 0px;
 }
 
-.form {
+.section-title {
+  margin: 0 0 10px;
+  text-align: center;
+  font-size: 19px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.section-title-border {
+  width: 70px;
+  height: 3px;
+  background: rgba(0, 0, 0, 0.13);
+  margin: 0 auto 20px;
+}
+
+.btn {
   text-decoration: none;
   color: #fff;
   padding: 10px 20px;
   border: none;
   outline: none;
   border-radius: 4px;
-  background: #678;
+  background-color: #337ab7;
   font-size: 1rem;
   margin: 10px 0px;
   position: relative;
 }
 
-.form:hover {
+.btn:hover {
   cursor: pointer;
   transition: all 0.3s ease;
-  transform: scale(1.15);
+  background-color: #23527a;
 }
 
 .main {
@@ -238,6 +254,20 @@ html {
   -moz-text-fill-color: transparent;
   cursor: pointer;
   font-size: 25px;
+}
+
+.project-title {
+  font-size: 22px;
+  font-weight: 500;
+  color: #37c;
+  margin-bottom: 10px;
+}
+
+.project-techstack {
+  font-size: 15px;
+  font-weight: 500;
+  color: green;
+  margin-bottom: 10px;
 }
 
 footer {
