--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,24 +120,28 @@ html {
 }
 
 .main {
-  background-image: url("../../images/landing.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100svh;
+  height: 100vh;
   text-transform: uppercase;
   color: white;
+  position: relative;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(40%);
 }
 
 .main h1 {
   font-size: 4rem;
-  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
-    1px 1px 0 black;
 }
+
 .main h2 {
   font-size: 1.5rem;
-  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
-    1px 1px 0 black;
 }
 
 .icon-button {
@@ -263,7 +267,7 @@ html {
   margin-bottom: 10px;
 }
 
-.project-techstack {
+.project-desc {
   font-size: 15px;
   font-weight: 500;
   color: green;
@@ -277,5 +281,5 @@ footer {
 
 footer .container {
   display: flex;
-  height: 7svh;
+  height: 10svh;
 }
