--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,8 +128,6 @@ html {
 
 .background-image {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -142,6 +140,10 @@ html {
 
 .main h2 {
   font-size: 1.5rem;
+}
+
+.value-icon {
+  margin-right: 5px;
 }
 
 .icon-button {
