--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -411,3 +411,16 @@ footer .container {
   border-width: 10px;
   top: 10px;
 }
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(32, 33, 36, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1999;
+}
