--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -424,6 +424,11 @@ footer .container {
   top: 10px;
 }
 
+.resume {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 #overlay {
   position: fixed;
   top: 0;
