--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,11 +58,25 @@ body {
   border-radius: 4px;
   background-color: #869198;
   font-size: 1rem;
-  margin: 10px 0px;
+  margin: 10px 10px;
   position: relative;
 }
 
+.btn a {
+  text-decoration: none;
+  color: #fff;
+}
+
 .btn:hover {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: #678;
+  transform: scale(1.1);
+}
+
+.btn:hover a {
+  text-decoration: none;
+  color: #fff;
   cursor: pointer;
   transition: all 0.3s ease;
   background-color: #678;
