--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ html {
 
 body {
   overscroll-behavior: none;
-  background: #2c2c2c !important;
+  /*background: #2c2c2c !important;*/
 }
 
 .anchors {
