--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -496,6 +496,13 @@ body {
 /* -------------- *
  * Projects
  * -------------- */
+ .proj-img img {
+  height: 300px;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+}
+
 .proj-title {
   font-size: 22px;
   font-weight: 500;
