--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -518,6 +518,45 @@ body {
   margin-bottom: 10px;
 }
 
+.popup-video {
+  position: fixed;
+  top:0;
+  left:0;
+  z-index: 100;
+  background: rgba(0,0,0,.8);
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.popup-video iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 750px;
+  height: 422px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+}
+
+.popup-video span {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  font-size: 50px;
+  color: #fff;
+  font-weight: bolder;
+  z-index: 100;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .popup-video iframe {
+    width: 95%;
+  }
+}
+
 /* -------------- *
  * Resume
  * -------------- */
