Substituted <br> with margin

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -496,6 +496,10 @@ body {
 /* -------------- *
  * Projects
  * -------------- */
+ .project {
+  margin-bottom: 50px;
+}
+
  .proj-img img {
   height: 300px;
   max-width: 100%;
