--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -15,6 +15,40 @@ body {
 }
 
 /* -------------- *
+ * Nav Bar
+ * -------------- */
+.navbar-nav .nav-link {
+    transition: all 0.3s ease;
+    border-radius: 10px;
+    padding: 8px 20px;
+    font-size: 1.25rem;
+    border: 2px solid transparent;
+}
+
+.navbar-nav .nav-link:hover {
+    border: 2px solid grey;
+    color: #333;
+    cursor: pointer;
+}
+
+.navbar-nav .nav-item {
+    margin-right: 10px;
+}
+
+.navbar-nav .nav-item:last-child {
+    margin-right: 0;
+}
+
+.navbar-collapse {
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.navbar-collapse::-webkit-scrollbar {
+    display: none;
+}
+
+/* -------------- *
  * Categories
  * -------------- */
 .category h2 {
@@ -28,7 +62,7 @@ body {
     flex-direction: row;
     border: 1px solid #ddd;
     border-radius: 5px;
-    height: 200px;
+    height: 175px;
     overflow: hidden;
 }
 
