Nav item highlighted if in corresponding section

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -48,6 +48,10 @@ body {
     display: none;
 }
 
+.navbar-nav .nav-link.active {
+    background-color: #E0E0E0;
+}
+
 /* -------------- *
  * Categories
  * -------------- */
