--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -18,7 +18,6 @@ body {
  * Nav Bar
  * -------------- */
 .navbar-nav .nav-link {
-    transition: all 0.3s ease;
     border-radius: 10px;
     padding: 8px 20px;
     font-size: 1.25rem;
@@ -50,6 +49,46 @@ body {
 
 .navbar-nav .nav-link.active {
     background-color: #E0E0E0;
+}
+
+@media (min-width: 1200px) {
+    .navbar {
+        position: fixed;
+        align-items: flex-start;
+        width: 200px;
+        height: 100%;
+        padding: 10px 0px;
+        overflow-y: auto;
+    }
+
+    .navbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .navbar-expand .navbar-collapse {
+        display: block !important;
+    }
+
+    .navbar-expand .navbar-nav {
+        flex-direction: column;
+    }
+
+    .navbar-nav .nav-item {
+        margin-right: 0px;
+    }
+
+    .navbar-expand .navbar-nav .nav-link {
+        padding: 8px 20px;
+    }
+
+    .navbar-expand .container-fluid {
+        padding: 0px 15px;
+    }
+      
+    .container {
+        margin-left: 225px;
+        max-width: calc(100% - 250px);
+    }
 }
 
 /* -------------- *
