--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -128,6 +128,13 @@ body {
     border-radius: 5px;
     height: 175px;
     overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+
+.card:hover {
+    transform: scale(1.01);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .card-img {
