--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -213,6 +213,131 @@ body {
 }
 
 /* -------------- *
+ * Modal
+ * -------------- */
+ .modal-dialog {
+    width: auto;
+    height: calc(100svh - 60px);
+    margin: 30px auto;
+    position: relative;
+}
+
+button.close {
+    position: absolute;
+    top: 10px;
+    right: 10px; 
+    font-size: 1.5rem;
+    color: #333;
+    background-color: white;
+    border-radius: 50%;
+    border: none;
+    width: 35px;
+    height: 35px;
+    z-index: 999;
+    opacity: 1;
+    transition: transform 0.2s ease;
+}
+
+button.close:hover {
+    transform: scale(1.2)
+}
+
+.modal-content {
+    height: 100%;
+}
+
+.modal-body {
+    overflow-y: auto;
+    padding: 0;
+    
+}
+
+.modal-body > * {
+    padding: 0 15px;
+}
+
+.modal-body::-webkit-scrollbar {
+    display: none;
+}
+
+#modal-image {
+    max-height: 300px;
+    width: 100%;
+    display: block;
+    padding: 0;
+    margin: 0;
+}
+
+#modal-name {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    padding: 10px 15px;
+    background: white;
+}
+
+#modal-name::after {
+    content: "";
+    display: block;
+    height: 1px;
+    background-color: gray;
+    width: 99%; 
+    margin-top: 10px;
+}
+
+.sticky-footer {
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    padding: 10px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    justify-content: space-between;
+    background-color: #f8f9fa;
+}
+
+#step-counter, #add-item {
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+#step-counter {
+    display: flex;
+    color: rgba(0, 0, 0, 0.5);
+    background-color: white;
+    width: 30%;
+    border: 1px solid gray;
+    padding: 10px;
+    justify-content: space-between;
+}
+
+#minus-btn, #plus-btn {
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+#minus-btn:hover, #plus-btn:hover {
+    transform: scale(1.2);
+}
+
+#add-item {
+    width: 65%;
+    background-color: #28a745;
+    color: white;
+    cursor: pointer;
+}
+
+#add-item:hover {
+    background-color: #218838;
+}
+
+@media (max-height: 390px) {
+    #modal-name {
+        position: fixed;
+    }
+}
+
+/* -------------- *
  * Footer
  * -------------- */
 .footer {
