--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -26,7 +26,7 @@ body {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
-    z-index: 999;
+    z-index: 1050;
 }
 
 /* -------------- *
@@ -165,15 +165,16 @@ body {
 
 .cart-panel {
     position: fixed;
-    top: 0;
+    top: 10px;
     right: -500px;
     width: 500px;
-    height: 100%;
+    height: calc(100% - 20px);
     background-color: white;
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-    z-index: 1050;
+    border-radius: 10px;
+    z-index: 1099;
     transition: right 0.3s ease-in-out;
     overflow-y: auto;
+    margin-right: 10px;
 }
   
 .cart-panel.active {
