--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -18,6 +18,10 @@ body {
     background-color: #f8f9fa;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
 .black-overlay {
     display: none;
     position: fixed;
@@ -27,6 +31,10 @@ body {
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
     z-index: 1050;
+}
+
+.black-overlay.active {
+    display: block;
 }
 
 /* -------------- *
@@ -180,6 +188,10 @@ body {
 .cart-panel.active {
     right: 0;
 }
+
+.cart-panel::-webkit-scrollbar {
+    display: none;
+}
   
 .cart-panel-header {
     padding: 20px;
@@ -291,97 +303,71 @@ body {
 }
 
 /* -------------- *
- * Modal
+ * Food
  * -------------- */
-.modal-dialog {
-    width: auto;
-    height: calc(100svh - 60px);
-    margin: 30px auto;
-    position: relative;
-}
-
-button.close {
-    position: absolute;
-    top: 10px;
-    right: 10px; 
-    font-size: 1.5rem;
-    color: #333;
+ .food-panel {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: calc(100% - 100px);
     background-color: white;
-    border-radius: 50%;
-    border: none;
-    width: 35px;
-    height: 35px;
-    z-index: 999;
-    opacity: 1;
-    transition: transform 0.2s ease;
-}
-
-button.close:hover {
-    transform: scale(1.2)
-}
-
-.modal-content {
-    height: 100%;
-    border: none;
+    width: 450px;
     border-radius: 10px;
-}
-
-.modal-body {
+    z-index: 1100;
     overflow-y: auto;
-    padding: 0;
-}
-
-.modal-body > * {
-    padding: 0 15px;
-}
-
-.modal-body::-webkit-scrollbar {
     display: none;
 }
+  
+.food-panel.active {
+    display: block;
+}
 
-#modal-image {
+.food-panel::-webkit-scrollbar {
+    display: none;
+}
+  
+.food-panel-header {
+    padding: 20px;
+    background-color: #f8f9fa;
+    border-bottom: 1px solid #ddd;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+  
+.food-panel-body {
+    padding: 20px;
+}
+
+.food-panel-body img {
     max-height: 300px;
     width: 100%;
-    display: block;
-    padding: 0;
-    margin: 0;
+    height: auto;
     border-radius: 10px;
+    margin-bottom: 20px;
+}
+  
+.food-desc {
+    margin-bottom: 20px;
 }
 
-#modal-name {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    padding: 10px 15px;
-    background: white;
-}
-
-#modal-name::after {
-    content: "";
-    display: block;
-    height: 1px;
-    background-color: gray;
-    width: 99%; 
-    margin-top: 10px;
-}
-
-.modal-buttons {
+.food-panel-footer {
+    display: flex;
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    padding: 20px;
     background-color: #f8f9fa;
-    border-radius: 10px;
+    border-top: 1px solid #ddd;
+    justify-content: space-between;
 }
-
-#step-counter, #add-item {
+  
+#step-counter, #add-food  {
     font-size: 1.5rem;
     font-weight: bold;
     border-radius: 10px;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 #step-counter {
@@ -390,8 +376,6 @@ button.close:hover {
     background-color: white;
     width: 30%;
     border: 1px solid gray;
-    padding: 10px;
-    justify-content: space-between;
 }
 
 #minus-btn, #plus-btn {
@@ -403,21 +387,15 @@ button.close:hover {
     transform: scale(1.2);
 }
 
-#add-item {
+#add-food {
     width: 65%;
     background-color: #28a745;
     color: white;
     cursor: pointer;
 }
 
-#add-item:hover {
+#add-food:hover {
     background-color: #218838;
-}
-
-@media (max-height: 390px) {
-    #modal-name {
-        position: fixed;
-    }
 }
 
 /* -------------- *
