--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -174,7 +174,7 @@ body.no-scroll {
 .cart-panel {
     position: fixed;
     top: 10px;
-    right: -500px;
+    right: -510px;
     width: 500px;
     height: calc(100% - 20px);
     background-color: white;
@@ -305,7 +305,7 @@ body.no-scroll {
 /* -------------- *
  * Food
  * -------------- */
- .food-panel {
+.food-panel {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -316,11 +316,14 @@ body.no-scroll {
     border-radius: 10px;
     z-index: 1100;
     overflow-y: auto;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
 }
-  
+
 .food-panel.active {
-    display: block;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.4s ease, visibility 0s ease 0s;
 }
 
 .food-panel::-webkit-scrollbar {
