--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -329,19 +329,18 @@ body.no-scroll {
     visibility: visible;
     transition: opacity 0.4s ease, visibility 0s ease 0s;
 }
-  
-.food-panel-header {
-    padding: 20px;
-    background-color: #f8f9fa;
-    border-bottom: 1px solid #ddd;
-    font-size: 1.25rem;
-    font-weight: bold;
-    border-radius: 10px;
+
+.food-panel-body .close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 1101;
 }
-  
+
 .food-panel-body {
     overflow-y: auto;
     flex-grow: 1;
+    border-radius: 10px;
 }
 
 .food-panel-body::-webkit-scrollbar {
@@ -352,10 +351,24 @@ body.no-scroll {
     max-height: 300px;
     width: 100%;
     height: auto;
+    border-radius: 10px;
 }
 
 #food-name {
-    padding: 10px;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    padding: 10px 20px;
+    background: white;
+}
+
+#food-name::after {
+    content: "";
+    display: block;
+    height: 1px;
+    background-color: gray;
+    width: 99%; 
+    margin-top: 10px;
 }
   
 .food-desc {
