::after instead of bottom border navbar

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -43,7 +43,17 @@ body.no-scroll {
 .navbar {
     padding-top: 10px;
     padding-bottom: 10px;
-    border-bottom: 1px solid grey;
+}
+
+.navbar::after {
+    content: "";
+    height: 1px;
+    background-color: gray;
+    width: 97%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .navbar-nav .nav-link {
@@ -439,6 +449,10 @@ body.no-scroll {
         height: 100%;
         padding: 10px 0px;
         overflow-y: auto;
+    }
+
+    .navbar::after {
+        display: none;
     }
 
     .navbar::-webkit-scrollbar {
