--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -223,6 +223,11 @@ body.no-scroll {
     border-top: 1px solid #ddd;
     border-radius: 10px;
 }
+
+.cart-panel-footer span {
+    display: flex;
+    justify-content: space-between;
+}
   
 .cart-panel-footer button {
     width: 100%;
